--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -3,6 +3,7 @@ layout: archive
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
+robots: noindex, nofollow
 ---
 
 {% include base_path %}
