--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,6 +4,7 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 robots: noindex, nofollow
+sitemap: false
 ---
 
 {% include base_path %}
